# palautusrepositorio

./: README.md
viikko1/nhl-statistics-1/: .coverage
viikko1/nhl-statistics-1/src/: index.py  player_reader.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/: pyproject.toml  tiedosto2.txt
viikko2/git-branch-harjoitus/: LICENSE  index.py  osamaara.py
viikko2/nhl-reader/src/: index.py  player.py
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/nhl-reader/src/: index.py  player.py
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: home.robot  login.robot  register.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/: referaatti.md
